# PurposePath_AI

./: .coveragerc  .git_commit_msg.txt  .git_commit_msg2.txt  .git_commit_msg_issue52.txt  .gitignore  .pre-commit-config.yaml  BEDROCK_ACCESS_SETUP.md  DEPLOYMENT_READY.md  DEVELOPMENT_WORKFLOW.md  IMPLEMENTATION_READINESS_ANALYSIS.md  ISSUE_208_RESOLUTION.md  MYPY_STATUS.md  PULUMI_DEPLOYMENT.md  PurposePath.code-workspace  QUICK_START.md  README.md  REFACTOR_CHANGES_KPI_TO_MEASURE.md  REFACTOR_COMPLEXITY_ESTIMATE.md  TEMP_FINAL_COMMENT.md  TEST_STATUS_REPORT.md  TODAYS_WORK_SUMMARY.md  UNIMPLEMENTED_FEATURES.md  WEBSITE_SCANNING_STATUS.md  __init__.py  build.ps1  buildspec.yml  check_bedrock_access.py  commit_and_merge.bat  comprehensive_validation.py  conftest.py  debug_settings.py  deploy.ps1  diagnose_coaching_errors.py  fix_all_remaining_errors.py  fix_model_codes.py  fix_operations_n815.py  fix_operations_properly.py  fix_ruff_errors.py  fix_topic_types.py  issue_222_comment.md  (+28 more)
coaching/: .env.example  DEPRECATIONS.md  Dockerfile  __init__.py  conftest.py  fix_datetime.ps1  lambda_handler.py  mypy_errors.txt  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  samconfig.toml  setup.ps1  template.yaml  test.ps1  validate_issue_81.py
coaching/.aws-sam/: build.toml
coaching/prompts/: insights_generation_v1.json
coaching/prompts/purpose/: 1.0.0.yaml
coaching/pulumi/: Pulumi.preprod.yaml  Pulumi.yaml  __main__.py  ai_debug_logs.json  index.ts  package.json  tsconfig.json
coaching/scripts/: quick_test_vertex.py  test_google_vertex.py  upload_prompts.ps1
coaching/shared/models/: multitenant.py  schemas.py
coaching/shared/services/: data_access.py
coaching/src/api/: auth.py  dependencies.py  dependencies_v2.py  legacy_dependencies.py  main.py  main_multitenant.py  main_v2.py  multitenant_dependencies.py
coaching/src/api/dependencies/: __init__.py  ai_engine.py  async_execution.py  coaching_message_job.py  sql_template_generation.py
coaching/src/api/handlers/: __init__.py  eventbridge_handler.py  generic_ai_handler.py
coaching/src/api/middleware/: __init__.py  admin_auth.py  error_handling.py  logging.py  rate_limiting.py
coaching/src/api/models/: __init__.py  ai_execute.py  analysis.py  async_ai.py  auth.py  business_data.py  conversations.py  onboarding.py  operations.py  strategic_planning.py  strategy_suggestions.py
coaching/src/api/routes/: __init__.py  ai_execute.py  ai_execute_async.py  analysis.py  business_data.py  coaching.py  coaching_ai.py  coaching_sessions.py  conversations.py  conversations_v2.py  health.py  insights.py  multitenant_conversations.py  onboarding.py  operations_ai.py  suggestions.py  topics.py  website.py
coaching/src/application/: __init__.py
coaching/src/application/ai_engine/: response_serializer.py  unified_ai_engine.py
coaching/src/core/: coaching_topic_registry.py  config.py  config_multitenant.py  constants.py  deprecation.py  endpoint_registry.py  exceptions.py  interaction_codes.py  llm_interactions.py  llm_models.py  parameter_registry.py  response_model_registry.py  retrieval_method_registry.py  structured_output.py  topic_registry.py  topic_seed_data.py  types.py
coaching/src/infrastructure/: __init__.py
coaching/src/llm/: __init__.py  memory.py  orchestrator.py  workflow_orchestrator.py
coaching/src/models/: __init__.py  admin_requests.py  admin_responses.py  admin_topics.py  business_context.py  coaching_results.py  conversation.py  enhanced_responses.py  insights.py  llm_coaching_response.py  llm_models.py  prompt.py  prompt_requests.py  prompt_responses.py  requests.py  responses.py  topics.py
coaching/src/repositories/: business_data_repository.py  conversation_repository.py  prompt_repository.py  topic_repository.py
coaching/src/scripts/: README.md  seed_coaching_topics.py  seed_parameter_store.py  seed_topics.py  verify_coaching_topics.py
coaching/src/services/: __init__.py  async_execution_service.py  audit_log_service.py  cache_service.py  coaching_message_job_service.py  coaching_session_service.py  conversation_service.py  insights_service.py  llm_configuration_service.py  llm_service.py  llm_service_adapter.py  llm_template_service.py  model_config_service.py  multitenant_conversation_service.py  onboarding_service.py  parameter_gathering_service.py  parameter_store_service.py  prompt_service.py  s3_prompt_storage.py  template_parameter_processor.py  template_testing_service.py  template_validation_service.py  topic_seeding_service.py  usage_analytics_service.py  user_limits_service.py  website_analysis_service.py
coaching/src/workflows/: __init__.py  analysis_workflow.py  analysis_workflow_template.py  base.py  coaching_workflow.py  conversation_workflow_template.py  orchestrator.py
coaching/step-functions/: coaching-orchestrator.json
coaching/tests/: conftest.py  test_admin_endpoints.py  test_business_data_api.py  test_langgraph_workflows.py  test_llm_service_refactoring.py
coaching/tests/e2e/: README.md  conftest.py  test_ai_execute_e2e.py  test_coaching_conversation_e2e.py  test_google_vertex_e2e.py  test_inference_profile_models.py  test_infrastructure_deployment.py  test_llm_providers_e2e.py  test_onboarding_website_e2e.py  test_operations_ai_e2e.py
coaching/tests/integration/: test_admin_prompts_api.py  test_api.py  test_business_api_integration.py  test_conversation_with_topics_e2e.py  test_llm_config_e2e.py  test_llm_configuration_integration.py  test_llm_prompts_infrastructure.py  test_llm_template_integration.py  test_sql_template_generation_integration.py  test_topic_system_e2e.py  test_unified_ai_engine.py
coaching/tests/performance/: README.md  __init__.py  load_test.py  test_api_performance.py  test_llm_config_performance.py  test_llm_template_performance.py
coaching/tests/unit/: test_bedrock_provider.py  test_business_api_client.py  test_config.py  test_constants.py  test_exceptions.py  test_insights_service.py  test_model_pricing.py  test_models.py  test_onboarding_models.py  test_onboarding_service.py  test_response_models.py
(+692 files in other folders)
