[project]
name = "purposepath-ai-coaching"
version = "1.0.0"
description = "PurposePath AI Coaching Service - Serverless AI-powered coaching platform"
authors = [{ name = "PurposePath Team", email = "dev@purposepath.ai" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Workspace-level configuration for multi-service monorepo
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_decorators = false
# Disable warn_unused_ignores because Starlette type stubs vary between environments
# Local Starlette 0.48.0 has stub issues that CI environment may not have
warn_unused_ignores = false

# Multi-service module resolution - use only root directory
mypy_path = ["."]

# Explicit package bases to handle multiple services
explicit_package_bases = true

# Service-specific modules to ignore external imports
[[tool.mypy.overrides]]
module = ["shared.*", "coaching.*"]
ignore_missing_imports = false

# External dependencies to ignore
[[tool.mypy.overrides]]
module = [
    "mangum.*",
    "boto3.*",
    "botocore.*",
    "mypy_boto3_dynamodb.*",
    "structlog.*",
    "fastapi.*",
    "uvicorn.*",
    "pydantic.*",
    "jose.*",
    "passlib.*",
    "redis.*",
    "langchain.*",
    "tiktoken.*",
    "requests.*",
    "yaml.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

# Include coaching and shared directories  
extend-include = ["coaching/src/**/*.py", "shared/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "ARG", "SIM", "RUF"]
ignore = [
    "E501",   # Line too long
    "B008",   # FastAPI Depends() in defaults is standard pattern
    "N999",   # Invalid module name (false positive from repo name PurposePath_AI)
]

[tool.ruff.lint.isort]
known-first-party = ["coaching", "shared"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/tests/**/*" = ["B011", "ARG001", "ARG002", "S101", "B007", "B017", "SIM118", "RUF043"]

[tool.black]
line-length = 100
target-version = ['py311']
# Include Python files in coaching and shared directories
include = '/(coaching|shared)/.*\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["coaching/tests", "tests"]
pythonpath = ["coaching", "shared", "."]
asyncio_mode = "auto"
